--- a/Ayuda.html
+++ b/Ayuda.html
@@ -91,44 +91,47 @@
             </section>
     </main>
     <footer class="footer">
-            <div class="container footer__caption">
-                <section class="download">
-                    <div class="download__app">
-                        <div class="download__item">
-                            <i class='bx bxl-whatsapp'></i>
-                            <h4 class="download__title">Whatsapp</h4>        
-                        </div>
-                        <div class="download__item">
-                            <i class='bx bxl-instagram-alt' ></i>
-                            <h4 class="download__title">Instagram</h4>        
-                        </div>
-                   </div>
-                   <div class="footer__text">
-                        <p class="textright">Farid Alfaro &text; 2022 Todos los derechos reservados</p>
-                        <a href="#" class="politica__privacidad politica__privacidad__margin">Politica
-                            de privacidad</a>
-                        <a href="#" class="politica__privacidad ">Terminos y condiciones</a>
-                    </div>
-                </section>
-                <div class="contact">
-                    <div class="item__contact">
-                        <i class="bx bx-textright contact__icon" ></i>
-                        <h3 class="contact__title"> Farid Alfaro</h3>
-                    </div>
-                     <div class="item__contact">
-                        <i class="bx bx-mail-send contact__icon" ></i>
-                         <h3 class="contact__title">farix6@gmail.com</h3>
-                    </div>
-                     <div class = "item__contact">
-                        <i class='bx bxs-edit-location contact__icon'></i>
-                        <h3 class ="contact__title">Córdoba</h3>
-                    </div>
-                    <div class = "item__contact item__contact__gold">
-                        <i class='bx bxs-chat contact__icon' ></i>
-                        <h3 class="contact__title" >Contactanos ahora</h3>
-                    </div>
+        <div class=" container">
+            <h1 class="subtitle subtitle__modifier">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, doloremque.</h1>
+        </div>
+        <div class="container footer__caption">
+            <section class="download">
+                <div class="download__app">
+                    <a href="https://www.instagram.com/" class="cta download__item">
+                        <i class='bx bxl-whatsapp'></i>
+                        <h4 class="download__title">Whatsapp</h4>        
+                    </a>
+                    <a href="https://www.instagram.com/" class="cta download__item">
+                        <i class='bx bxl-instagram-alt' ></i>
+                        <h4 class="download__title">Instagram</h4>        
+                    </a>
+               </div>
+               <div class="footer__text">
+                    <p class="textright">Farid Alfaro &text; 2022 Todos los derechos reservados</p>
+                    <a href="#" class="politica__privacidad politica__privacidad__margin">Politica
+                        de privacidad</a>
+                    <a href="#" class="politica__privacidad ">Terminos y condiciones</a>
                 </div>
-           </div>
-                        I
+            </section>
+            <div class="contact">
+                <div class="item__contact">
+                    <i class="bx bx-textright contact__icon" ></i>
+                    <h3 class="contact__title"> Farid Alfaro</h3>
+                </div>
+                 <div class="item__contact">
+                    <i class="bx bx-mail-send contact__icon" ></i>
+                     <h3 class="contact__title">farix6@gmail.com</h3>
+                </div>
+                 <div class = "item__contact">
+                    <i class='bx bxs-edit-location contact__icon'></i>
+                    <h3 class ="contact__title">Córdoba</h3>
+                </div>
+                <div class = "item__contact item__contact__gold">
+                    <i class='bx bxs-chat contact__icon' ></i>
+                    <h3 class="contact__title" >Contactanos ahora</h3>
+                </div>
+            </div>
+       </div>
+                    I
     </footer>
 </body>
